--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,149 @@
+*{
+    font-family: 'Courier New', Courier, monospace;
+}
 
+body{
+    background-image: linear-gradient(to right,rgb(204, 83, 204), rgb(235, 168, 45));
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
 ul,li { 
     list-style-type: none;
     list-style-position:inside;
     margin:0;
-    padding:0; 
+    padding:0;
 }    
 
-
+li:hover{
+    border-bottom: black solid 1px;
+}
 .head{
     display: flex;
     justify-content: space-between;
-    border: solid 3px black;
+    border-bottom: solid 3px white;
     padding-left: 5%;
-    margin: 50px;
+    margin: 1% 20%;
+    color: rgb(85, 19, 85);
 }
 .head-container{
     display: flex;
     justify-content: flex-end;
-    border: solid 3px red;
+}
+.addBtn{
+    background-color: transparent;
+    color: rgb(168, 36, 168);
+    border: none;
+    font-size: large;;
+    font-weight: bolder;
+    margin-right: 30px;
+}
+.addBtn:hover{
+    color: wheat;
+    background-color: rgb(85, 19, 85);
+    font-size: large;;
+    font-weight: bolder;
+    border-radius: 15px;
+    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    padding: 15px;
+    margin-right: 30px;
+    margin-bottom: 7px;
 }
 .stepOne{
-background-color: blueviolet;
+background-color: rgb(85, 19, 85);
 display: none;
 justify-content: space-between;
-margin: 0 50px;
-padding: 15px 10px;
+margin: 5% 20%;
+padding: 25px;
+color: rgb(243, 222, 182);
+font-weight: bolder;
 }
 .stepOne input {
-width: 300%;
+min-width: 200%;   
 height: 45%;
 text-align: center;
+font-weight: bolder;
+
+}
+.stepOne button{
+    margin-top: 40%;
 }
 .stepTwo{
     display: none;
-    background-color: blueviolet;
+    background-color: grey;
 justify-content: space-between;
-margin: 0 50px;
-padding: 0px;
 text-align: center;
+background-color: rgb(85, 19, 85);
+margin: 5% 20%;
+padding: 25px;
+color: rgb(243, 222, 182);
+font-weight: bolder;
     
 }
 .stepTwo h2 {
-    border: black solid 1px;
     padding: 20px;
-    background-color: pink;
 }
 .form-Btn{
     display: block;
-    width: 100%;
     margin-top: 7%;
     padding: 3%;
+    width: 50px;
+    margin-left: 85%;
+    font-size: x-large;
+    background-color: wheat;
+    color: rgb(85, 19, 85);
+}
+.form-Btn:hover{
+    display: block;
+    padding: 3%;
+    width: 50px;
+    margin-left: 85%;
+    font-size: xx-large;
+    background-color:  rgb(85, 19, 85);
+    color: wheat;
+    border: none;
 }
 
 .manBtn{
+    font-weight: bolder;
+    font-size: larger;
+    color: white;
+    border: none;
+    border-radius: 15px;
     padding: 3%;
     width: 50%;
+    background-image: linear-gradient(to right,rgb(168, 36, 168), rgb(235, 168, 45));
+}
+.manBtn:hover{
+    font-weight: bolder;
+    font-size: larger;
+    color: white;
+    border: none;
+    border-radius: 15px;
+    padding: 3.5%;
+    width: 50%;
+    background-image: linear-gradient(to right,rgb(235, 168, 45),rgb(168, 36, 168)) ;
+
 }
 
 .listContainer{
-    margin: 0 50px;
-    background-color: seagreen;
+    margin: 5% 20% 30%;
         
 }
 
 
 
 .manListTitle {
+    color: wheat;
     display: flex;
     justify-content: space-between;
-    background-color: pink;
+    background-color: rgb(85, 19, 85);
     padding: 15px 20px;
+    margin-bottom: 3%;
 }
 .manListItem {
     display: flex;
     justify-content: space-between;
-    background-color: plum;
+    background-color: rgb(250, 213, 143);
    
     
 } 
@@ -86,10 +155,12 @@ text-align: center;
     
 }
 .expListItem{
-    background-color: sandybrown;
+    background-color: rgb(2, 12, 24);
     margin-top: 0px;
     padding: 8px;
     text-align: center;
+    border: solid 1px black;
+    color: wheat;
 }
 
 .pToggle{
@@ -97,4 +168,32 @@ text-align: center;
 }
 .completed{
     text-decoration: line-through;
+}
+.expandBtn{
+background-color:rgb(85, 19, 85);
+color: wheat;
+}
+.expandBtn:hover{
+    background-color: rgb(41, 0, 27);
+color:wheat;
+font-size: large;
+}
+.completeBtn{
+    color: rgb(41, 0, 27);
+    background-color: rgb(143, 233, 143);
+}
+.completeBtn:hover{
+    color: rgb(41, 0, 27);
+    background-image: linear-gradient(to right,rgb(12, 240, 12), rgb(235, 168, 45));
+    font-size: large;
+}
+
+.trashBtn{
+    background-color: rgb(241, 80, 80);
+    color: wheat;
+}
+.trashBtn:hover{
+    background-color: rgb(209, 19, 19);
+    color: wheat;
+    font-size: large;
 }
